k8s/blue-green/destinationrule.yaml
apiVersion: networking.istio.io/v1
kind: DestinationRule
metadata:
  name: backend
spec:
  host: backend
  subsets:
    - name: blue
      labels:
        version: blue
    - name: green
      labels:
        version: green
