k8s/blue-green/virtualservice.yaml
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: backend
  annotations:
    argocd.argoproj.io/sync-wave: "2"
spec:
  hosts:
    - backend
  http:
    - route:
        - destination:
            host: backend
            subset: blue
          weight: 100
        - destination:
            host: backend
            subset: green
          weight: 0
